fixed auto zoom on ios

--- a/src/app/styles/page.module.scss
+++ b/src/app/styles/page.module.scss
@@ -101,6 +101,7 @@
 		transform: translateX(-50px);
 		border: none;
 		outline: none;
+		font-size: 16px;
 	}
 	.input {
 		transform: translateX(0px);
